@@ -1,21 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
- ~ Copyright (C) 2015-2017 PÂRIS Quentin
- ~
- ~ This program is free software; you can redistribute it and/or modify
- ~ it under the terms of the GNU General Public License as published by
- ~ the Free Software Foundation; either version 2 of the License, or
- ~ (at your option) any later version.
- ~
- ~ This program is distributed in the hope that it will be useful,
- ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
- ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- ~ GNU General Public License for more details.
- ~
- ~ You should have received a copy of the GNU General Public License along
- ~ with this program; if not, write to the Free Software Foundation, Inc.,
- ~ 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
- -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.phoenicis</groupId>
@@ -47,19 +30,28 @@
         <project.root>${project.basedir}</project.root>
         <project.settings>${project.root}/settings</project.settings>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <org.bouncycastle.version>1.46</org.bouncycastle.version>
+
+        <org.bouncycastle.version>1.78</org.bouncycastle.version>
         <slf4j.version>2.0.16</slf4j.version>
-        <surefire.version>3.5.1</surefire.version>
         <logback.version>1.5.16</logback.version>
         <junit.version>4.13.2</junit.version>
         <mockito.version>5.15.2</mockito.version>
-        <spring.version>5.3.23</spring.version>
+        <spring.version>6.2.12</spring.version>  <javafx.version>20.0.2</javafx.version>    <surefire.version>3.5.4</surefire.version>
         <formatter-maven-plugin.version>2.23.0</formatter-maven-plugin.version>
-        <graalvm.version>21.1.0</graalvm.version>
         <buildnumber.version>3.2.1</buildnumber.version>
-    </properties>
+        <graalvm.version>21.1.0</graalvm.version> </properties>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-controls</artifactId>
+                <version>${javafx.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-fxml</artifactId>
+                <version>${javafx.version}</version>
+            </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -93,8 +85,6 @@
     <build>
         <pluginManagement>
             <plugins>
-                <!--This plugin's configuration is used to store Eclipse m2e settings
-                    only. It has no influence on the Maven build itself. -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
                     <artifactId>lifecycle-mapping</artifactId>
@@ -112,8 +102,6 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <!-- m2e doesn't know what to do with jacoco, let's ignore it or
-                                            annoying error markers appear see http://wiki.eclipse.org/M2E_plugin_execution_not_covered -->
                                         <ignore></ignore>
                                     </action>
                                 </pluginExecution>
@@ -201,6 +189,7 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -220,21 +209,26 @@
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <!-- Updated to Java 20 release version -->
                     <release>20</release>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
                 <configuration>
-                    <argLine>--add-exports javafx.graphics/com.sun.javafx.application=org.testfx --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    <argLine>
+                        --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-modules javafx.controls,javafx.fxml,javafx.graphics
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
@@ -275,4 +269,3 @@
         </profile>
     </profiles>
 </project>
-
